<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>
    <string name="app_name">KROHNE Display</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="invalid_device_data">Invalid Device Data!</string>
    <string name="no_data">No devices</string>
    <string name="not_supported">Not supported</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="supported">Supported</string>
    <string name="unknown">unknown</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_service">Unknown service</string>
    <string name="no_known_services">No known services</string>

    <!-- Formatters -->
    <string name="formatter_meters">%sm</string>
    <string name="formatter_db">%sdb</string>
    <string name="formatter_item_count">Items: %s</string>

    <!-- Menu items -->
    <string name="menu_about">About</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_share">Share</string>

    <!-- Export Email Strings -->
    <string name="exporter_email_device_list_subject">Bluetooth LE Scan Results (%s)</string>
    <string name="exporter_email_device_services_subject" formatted="false">Bluetooth LE Device GATT Results (%s, %s)</string>
    <string name="exporter_email_device_list_body">Please find attached the scan results.</string>
    <string name="exporter_email_device_list_picker_text">Please select your email client:</string>

    <!-- Labels -->
    <string name="about_dialog_text">Krohne Scanner v1.0\n\nDevelopment by KROHNE Engineering\nhttp://www.krohne.ru\n\nVERSION 1.0.0.1\n</string>
    <string name="header_device_info">Device Info</string>
    <string name="header_ibeacon_data">iBeacon Data</string>
    <string name="header_raw_ad_records">Raw Ad Records</string>
    <string name="header_rssi_info">RSSI Info</string>
    <string name="header_scan_record">Scan Record</string>
    <string name="label_advertisement">Advertisement:</string>
    <string name="label_as_array">As Array:</string>
    <string name="label_as_string">As String:</string>
    <string name="label_bluetooth_le_status">Bluetooth LE:</string>
    <string name="label_bluetooth_status">Bluetooth:</string>
    <string name="label_bonding_state">Bonding State:</string>
    <string name="label_company_id">Company ID:</string>
    <string name="label_data">Data:</string>
    <string name="label_desc">Desc:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_device_class">Device Class:</string>
    <string name="label_device_major_class">Major Class:</string>
    <string name="label_device_services">Services:</string>
    <string name="label_device_name">Device Name:</string>
    <string name="label_distance">Distance:</string>
    <string name="label_first_rssi">First RSSI:</string>
    <string name="label_first_timestamp">First Timestamp:</string>
    <string name="label_last_rssi">Last RSSI:</string>
    <string name="label_last_timestamp">Last Timestamp:</string>
    <string name="label_mac">MAC:</string>
    <string name="label_major">Major:</string>
    <string name="label_minor">Minor:</string>
    <string name="label_rssi">RSSI:</string>
    <string name="label_running_average_rssi">Running Average RSSI:</string>
    <string name="label_state">State:</string>
    <string name="label_tx_power">TX Power:</string>
    <string name="label_uuid">UUID:</string>
    <string name="label_updated">Updated:</string>
    <string name="label_decriptor">Descriptor:</string>
    <string name="buttonScan">SCAN</string>
    <string name="buttonShow">READ</string>
    <string name="buttonConf">CONF</string>
    <string name="buttonInfo">INFO</string>
    <string name="buttonConnect">CONN</string>
    <string name="buttonConnectDev">CONN</string>
    <string name="buttonInfoDev">INFO</string>
    <string name="splash_text">KROHNE</string>
    <string name="select_grapf">Select data:</string>
    <string name="parERRORS">ERRORS</string>
    <string name="parTOF_DIFF">TOF_DIFF, ns</string>
    <string name="parFLOW_SPEED">FLOW_SPEED , mm/s</string>
    <string name="parFLOW">FLOW , l/h</string>
    <string name="parVOLUME">VOLUME , m3</string>
    <string name="parFLOW_AVG">FLOW_AVG l/h</string>
    <string name="parPeriodAuto">Auto</string>
    <string name="parShowParNotify">Update:NOTIFY</string>
    <string name="show_period">Select peroid of queries:</string>
    <string name="show_parameters">Select type of data update:</string>
    <string name="buttWrite">READ/WRITE</string>
    <string name="buttRead">READ</string>
    <string name="parReadCustom">Select parameter</string>
    <string name="par100ms">Period: 100ms</string>
    <string name="par500ms">Period: 500ms</string>
    <string name="par1000ms">Period: 1000ms</string>
    <string name="par2000ms">Period: 2000ms</string>
    <string name="par5000ms">Period: 5000ms</string>
    <string name="par10000ms">Period: 10000ms</string>
    <string name="par30000ms">Period: 30000ms</string>
    <string name="timer">Update:TIMER</string>
    <string name="notify">Update:NOTIFY</string>
    <string name="timernotify">NOTIFY+TIMER</string>
    <string name="demo_dialog_text">Your demo version has expired!\nPlease call to development to upgrade it.\n</string>
    <string name="show_wparameters">Select options</string>
    <string name="show_outputtype" >Output settings</string>
    <string name="show_outputtype_pf">Frequency output</string>
    <string name="show_outputtype_pi">Impulse output</string>
    <string name="show_gk">GK settings</string>
    <string name="Set_zero">Zero settings</string>
    <string name="Set_qmin">Qmin settings</string>
    <string name="Set_qmax">Qmax settings</string>
</resources>