<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main_menu"
        android:weightSum="4">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonScan"
            android:id="@+id/buttonScan"
            android:onClick="onSCANclick"
            android:background="@color/actionbar_text"
            android:layout_weight="1"
            android:textColor="@color/actionBar_background" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonShow"
            android:id="@+id/buttonShow"
            android:onClick="onSHOWclick"
            android:background="@color/actionbar_text"
            android:layout_weight="1"
            android:textColor="@color/actionBar_background" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonConf"
            android:onClick="onCONFclick"
            android:id="@+id/buttonConf"
            android:background="@color/actionbar_text"
            android:layout_weight="1"
            android:textColor="@color/actionBar_background" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonInfo"
            android:onClick="onINFOclick"
            android:id="@+id/buttonInfo"
            android:textColor="@color/actionBar_background"
            android:layout_weight="1"
            android:background="@color/actionbar_text" />
    </LinearLayout>

    <GridLayout
        android:id="@+id/deviceInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_menu"
        android:columnCount="2"
        android:useDefaultMargins="true">

        <TextView
            style="@style/GridLayoutTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_device_address"/>

        <TextView
            android:id="@+id/device_address"
            style="@style/GridLayoutDataTextView"/>

        <TextView
            style="@style/GridLayoutTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_state"/>

        <TextView
            android:id="@+id/connection_state"
            style="@style/GridLayoutDataTextView"/>
    </GridLayout>

    <View
        android:id="@+id/upperSepparator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/deviceInformation"
        android:background="@android:color/holo_blue_dark"/>

    <GridLayout
        android:id="@+id/gattInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:columnCount="2"
        android:useDefaultMargins="true">

        <TextView
            style="@style/GridLayoutTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_uuid"/>

        <TextView
            android:id="@+id/uuid"
            style="@style/GridLayoutDataTextViewMonospace"/>

        <TextView
            style="@style/GridLayoutTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_desc"/>

        <TextView
            android:id="@+id/description"
            style="@style/GridLayoutDataTextViewMonospace"/>

        <TextView
            style="@style/GridLayoutTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_as_string"/>

        <TextView
            android:id="@+id/data_as_string"
            style="@style/GridLayoutDataTextViewMonospace"/>

        <TextView
            style="@style/GridLayoutTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_as_array"/>

        <TextView
            android:id="@+id/data_as_array"
            style="@style/GridLayoutDataTextViewMonospace"/>
    </GridLayout>

    <View
        android:id="@+id/lowerSepparator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/gattInformation"
        android:background="@android:color/holo_blue_dark"/>

    <ExpandableListView
        android:id="@+id/gatt_services_list"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/lowerSepparator"
        android:layout_below="@id/upperSepparator"/>

</RelativeLayout>